# sb2sep

./: LICENSE  README.md  calculate_radial_velocities.py  pyproject.toml  requirements.txt  rotational_broadening_function_fitting.py  setup.cfg  setup.py  spectral_separation_routine.py  storage_classes.py
docs/: evaluate.md  index.md  installation.md  preparation.md  quickstart.md  results.md  routine_options.md
src/sb2sep/: __init__.py  broadening_function_svd.py  calculate_radial_velocities.py  evaluate_ssr_results.py  gaussian_fitting.py  linear_limbd_coeff_estimate.py  rotational_broadening_function_fitting.py  spectral_separation_routine.py  spectrum_processing_functions.py  storage_classes.py
src/sb2sep_jsinkbaek.egg-info/: PKG-INFO  SOURCES.txt
test/kic10001167/: RV_from_spectra_kic10001167.py  RV_from_spectra_kic10001167_230430.py  broadening_shape.py  check_for_third_companion_kic10001167.py  compare_telluric_rv.py  create_separated_spectrum_kic10001167.py  errors_rv_only.py  routine_config.txt  rv_config.txt  rv_of_new_spectra.py  sep_config.txt  sn_estimator.py  vsini_giant.py
test/kic8430105/: RV_from_spectra_kic8430105.py  routine_config.txt  rv_config.txt  sep_config.txt
test/kic8430105/Data/: FIBi230047_step011_merge.fits  FIBi240080_step011_merge.fits  FIBi290054_step011_merge.fits  FIBi300038_step011_merge.fits  FIBj010048_step011_merge.fits  FIBj030097_step011_merge.fits.lowSN  FIBj030100_step011_merge.fits  FIBj030108_step011_merge.fits  FIBj040099_step011_merge.fits  FIBj150080_step011_merge.fits  FIBk030043_step011_merge.fits  FIBk050063_step011_merge.fits  FIBk060011_step011_merge.fits  FIBk140069_step011_merge.fits  FIBk230070_step011_merge.fits  FIBl010114_step011_merge.fits  FIBl060068_step011_merge.fits  FIDh160100_step011_merge.fits  FIDi080098_step011_merge.fits  FIDi090065_step011_merge.fits  FIDi130112_step011_merge.fits  FIEh020092_step012_merge.fits  notes.txt
test/kic8430105/Data/template_spectra/: sources.txt  telluric.txt  telluric_noheader.txt
test/test_orders/: test_orders.py
