[project]
name = 'sb2sep'
version = '1.2.1.dev1'
description = "Separate Stellar Component Spectra in SB2 Binary System"
authors = [{name = "Jeppe Sinkbaek Thomsen", email = "jeppest2@gmail.com"}]
readme = "README.md"
dependencies = [
    "numpy >= 1.19.4",
    "scipy >= 1.5.4",
    "matplotlib >= 3.3.4",
    "lmfit >= 1.0.2",
    "joblib >= 0.17.0",
    "barycorrpy >= 0.4.1",
    "astropy >= 4.1",
]
requires-python = ""
classifiers = [
    "Programming Language :: Python :: 3",
]

keywords = ["SB2 binary analysis", "astronomy", "spectroscopy"]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ['LICENSE']         # might change with PEP 639
