[metadata]
name = sb2sep
version = 1.2.0
author = Jeppe Sinkbæk Thomsen
author_email = jeppest2@gmail.com
description = Separate Stellar Component Spectra and Calculate Radial Velocities in SB2 Binary Systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsinkbaek/sb2sep
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src